--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -2,12 +2,25 @@ doctype html
 html
   head
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    title= title
+    title QuickFit
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/all.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    nav.navbar.navbar-expand-lg
+        button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation")
+            span.navbar-toggler-icon
+        .collapse.navbar-collapse.justify-content-end(id="navbarToggle")
+            button.btn.btn-default.my-2.my-sm-0 Login
+    .jumbotron.jumbotron-fluid
     block content
+    footer.footer.fixed-bottom
+        .container
+            .row
+                section.col-4
+                section.col-4
+                section.col-4
+            .text-center &copy; Copyright QuickFit 2020
     script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js', integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo', crossorigin='anonymous')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js', integrity='sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49', crossorigin='anonymous')
     script(src='/javascripts/bootstrap.min.js')
