--- a/app_server/views/intro.pug
+++ b/app_server/views/intro.pug
@@ -1,12 +1,12 @@
 extends layout
 block content
-  h1= title
-  p Welcome to #{title}
+  h1.text-center= title
+  p.text-center Welcome to the #{title} page
   .container.main-content
     .row.mt-5
       section
         p.text-center QuickFit is a progressive web application designed to help people meet their fitness goals, whatever they may be. QuickFit has been created from the ground-up with beginners in mind. It aims to remove needless complexities that are often experienced by the beginner when choosing a workout program. Click below to find a workout program tailored to your needs by going through our questionnaire.
     .row.mt-5
       .col.text-center
-        .button.btn.btn-default.btn-lg.my-2.p-3 Find your workout program
-        .button.btn.btn-default.btn-lg.my-2.p-3 See all programs
+        a.button.btn.btn-default.btn-lg.my-2.p-3 Find your workout program
+        a.button.btn.btn-default.btn-lg.my-2.p-3 See all programs
