--- a/app_server/views/questionnaire.pug
+++ b/app_server/views/questionnaire.pug
@@ -7,15 +7,15 @@ block content
 
       //- Choices
       .col.text-center
-        button.btn.btn-lg.btn-active.m-4.mt-5.p-3.col-sm-3.col-md-3 Gain Muscle
-        button.btn.btn-lg.btn-active.m-4.mt-5.p-3.col-sm-3.col-md-3 Maintain Weight
-        button.btn.btn-lg.btn-active.m-4.mt-5.p-3.col-sm-3.col-md-3 Burn Fat
+        button.btn.btn-lg.qnr-btn.m-4.mt-5.p-3.col-sm-3.col-md-3.hideOverflow Gain Muscle
+        button.btn.btn-lg.qnr-btn.m-4.mt-5.p-3.col-sm-3.col-md-3.hideOverflow Maintain Weight
+        button.btn.btn-lg.qnr-btn.m-4.mt-5.p-3.col-sm-3.col-md-3.hideOverflow Burn Fat
 
-      //-Prev/Next Btns
+      //- Prev/Next Btns
       .navigation-btn
         .container
           .row.justify-content-between
             .col-6
               button.btn.nav-btn.col-sm-3.col-md-6 Previous
             .col-6
-              button.btn.nav-btn.col-sm-3.col-md-6(id="nav-btn-right") Next
+              button#nav-btn-right.btn.nav-btn.col-sm-3.col-md-6 Next
