--- a/app_server/views/register.pug
+++ b/app_server/views/register.pug
@@ -8,7 +8,7 @@ block content
 
     .row.mt-5
       //- Form
-      .col-lg-8.col-md-12.form
+      .form.col-lg-8.col-md-12
         .row
           .col-6
             input(type="text" placeholder="First name")
@@ -24,12 +24,11 @@ block content
             input(type="text" placeholder="Confirm")
         .row.mt-3
           .col-12 Use 8 or more characters with a mix of letters, numbers, and symbols
-
       //- Image
       .col-lg-4.d-none.d-lg-block
         img(src="../images/placeholder.svg" alt="")
 
-    //- Button Row -->
+    //- Button Row
     .row.mt-5
       .col
         button.btn.btn-default.btn-blue.btn-lg Sign Up
