--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,12 @@
   padding: 0
 }
 
+/* Have extra space at bottom so that you can scroll down past the fixed footer.
+   Otherwise it could hide content. */
+html {
+  margin-bottom: 300px;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -16,6 +22,11 @@ body {
   color: #000000;
 }
 
+#IntroMsg {
+  font-size: 18px;
+}
+
+/* Navbar *********************************************************************/
 .navbar {
   background-color: #294D67;
 }
@@ -30,6 +41,7 @@ body {
   margin: 3px 0;
 }
 
+/* Home button in navbar */
 #home {
   margin-bottom: 5px;
 }
@@ -41,6 +53,7 @@ body {
   background-position: center;
   padding: 100px;
 }
+/******************************************************************************/
 
 .btn {
   margin: 3px
@@ -69,4 +82,48 @@ body {
 .footer {
   background-color: #294D67;
   padding: 15px;
+}
+
+/* Questionnaire **************************************************************/
+/* qnr-btn stands for questionnaire button */
+.qnr-btn {
+  background-color: #FF9A00;
+  color: #FFF;
+}
+
+.qnr-btn:hover {
+  color: #000;
+}
+
+.qnr-btn:focus {
+  background-color: #ff5d00;
+  font-weight: bold;
+  color: #000;
+}
+
+.nav-btn {
+  background-color: #00a2ff;
+  color: #FFFFFF;
+  position: sticky;
+}
+
+#nav-btn-right {
+  background-color: #00a2ff;
+  color: #FFFFFF;
+  float: right;
+  position: sticky;
+  visibility: hidden;
+}
+
+.badge-pill {
+  background-color: #ff5d00;
+  color: #FFFFFF;
+}
+
+.choiceFixed {
+  height: 370px;
+}
+
+a:hover {
+  color: black;
 }
