--- a/app_server/views/login.pug
+++ b/app_server/views/login.pug
@@ -9,7 +9,7 @@ block content
         input(type="password" placeholder="Password")
     .row.mt-5
       .col-3.text-center.mx-auto
-        a.button.btn.btn-default.btn-block.p-2 Login
+        a.button.btn.btn-default.btn-block.p-2(href='/dashboard') Login
     .row.mt-3
       .col-3.text-center.mx-auto
         a.button.btn.btn-default.btn-block.p-2(href='/register') Create Account
