--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,6 @@
 * {
-  margin: 0
-  padding: 0
+  margin: 0;
+  padding: 0;
 }
 
 /* Have extra space at bottom so that you can scroll down past the fixed footer.
@@ -126,4 +126,71 @@ body {
 
 a:hover {
   color: black;
+}
+
+/* Dashboard ******************************************************************/
+.greeting {
+  font-size: 40px;
+  margin-bottom: 30px;
+}
+
+.row > .my-programs, .row > .current-program, .row > .nutrition, .row > .history, .row > .info {
+  border: 1px solid #686767;
+  border-radius: 20px;
+  padding: 0;
+}
+
+.my-programs > div:nth-child(even), .nutrition > div:nth-child(even) {
+  background-color: #ffffff;
+}
+
+.my-programs > div, .nutrition > div, .current-program > div, .program-list > div {
+  border-bottom: 2px solid #706e6e;
+}
+
+.program-list > div:last-child, .nutrition > div:last-child {
+  border-bottom: none;
+}
+
+.nutrition > div {
+  padding: 0 10px 0 10px;
+}
+
+.box-title {
+  font-size: 25px;
+  padding: 0 0 10px 10px;
+}
+
+.current-program {
+  margin: 0 50px 0 50px;
+}
+
+.row {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.add-button {
+  box-sizing: border-box;
+  width : 100%;
+}
+
+.program-list {
+  padding: 0;
+}
+
+.program-list > div {
+  padding: 0;
+}
+
+.buttons > button {
+  color: #ffffff;
+  background-color: #237fbd;
+  border-radius: 20px;
+  border: 1px solid #267fa8;
+  margin: 3px 0 3px 0;
+}
+
+.program-list {
+  border-radius: 0 0 20px 20px;
 }
