Added profile page, renamed it to account page. Accessible through account button at the bottom of dashboard page.

--- a/app_server/views/dashboard.pug
+++ b/app_server/views/dashboard.pug
@@ -43,3 +43,8 @@ block content
         div Add shit
         div Fats
         div Add shit
+    br
+    br
+    br
+    .row.d-flex.justify-content-center
+      a.btn.btn-default(href="/dashboard/account") Account
