--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -194,3 +194,53 @@ a:hover {
 .program-list {
   border-radius: 0 0 20px 20px;
 }
+
+/* Profile Page *******************************************************/
+.exercise-names {
+  padding-right: 0;
+}
+
+.exercise-names > div {
+  margin-bottom: 3px;
+}
+
+.exercise-names div:nth-child(even) {
+  background-color: pink;
+}
+
+.exercise-names div:nth-child(odd) {
+  background-color: yellowgreen;
+}
+
+/* Profile */
+.history > div:nth-child(even), .info > div:nth-child(even) {
+  background-color: #ffffff;
+}
+
+.history > div, .info > div {
+  border-bottom: 2px solid #706e6e;
+}
+
+.history > div:last-child, .info > div:last-child {
+  border-bottom: none;
+}
+
+.box-title {
+  font-size: 25px;
+  padding: 0 0 10px 10px;
+}
+
+::placeholder {
+  color: #000000;
+  font-style: italic;
+}
+
+.fields {
+  padding: 30px 0 200px 0;
+  border-radius: 0 0 20px 20px;
+}
+
+.update-button {
+  box-sizing: border-box;
+  width : 100%;
+}
