Added calendar view. Accessible through dashboard.

--- a/app_server/views/dashboard.pug
+++ b/app_server/views/dashboard.pug
@@ -48,3 +48,4 @@ block content
     br
     .row.d-flex.justify-content-center
       a.btn.btn-default(href="/dashboard/account") Account
+      a.btn.btn-default(href="/dashboard/calendar") Calendar View
