Exercise page/Search alpha

--- a/app_server/views/calendar.pug
+++ b/app_server/views/calendar.pug
@@ -20,8 +20,8 @@ block content
         tr
           - for (let i = 1; i <= 7; i++)
             td.text-center.p-1.pt-0.pb-0.m-0
-              button.btn.btn-default.btn-orange.pt-0.pb-0.pr-4.pl-4 Add
+              a.add-btn.button.btn.btn-default.pt-0.pb-0.pr-4.pl-4(href='/') Add
         tr
           - for (let i = 1; i <= 7; i++)
             td.pt-0.pb-0.m-0
-              button#empty.btn.btn-default.btn-orange.pt-0.pb-0.pr-3.pl-3 empty
+              a.empty-btn.btn.btn-default.pt-0.pb-0.pr-3.pl-3(href='/') empty
