--- a/app_server/views/dashboard.pug
+++ b/app_server/views/dashboard.pug
@@ -1,7 +1,7 @@
 extends layout
 block content
   .container-fluid.main-content
-    .text-center.greeting Hello [Name]
+    .text-center.greeting= greetingMsg
     .row.d-flex.justify-content-center
       .col-4.my-programs
         .row.font-weight-bold.box-title
