--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -16,6 +16,10 @@ html
         #navbarToggle.navbar-collapse.collapse
           ul.navbar-nav.center.ml-auto
             li.nav-item
+              a.nav-link.btn.btn-default(href='/exercises') Exercises
+            li.nav-item
+              a.nav-link.btn.btn-default(href='/dashboard') Dashboard
+            li.nav-item
               a.nav-link.btn.btn-default(href='/login') Login
             li.nav-item
               a.nav-link.btn.btn-default(href='/about') About
