--- a/app_server/views/questionnaire.pug
+++ b/app_server/views/questionnaire.pug
@@ -24,4 +24,4 @@ block content
             .col-6
               a.btn.nav-btn.col-sm-3.col-md-6(href=prev) Previous
             .col-6
-              a#nav-btn-right.btn.nav-btn.col-sm-3.col-md-6(href=next) Next
+              a#nav-btn-right.btn.nav-btn.col-sm-3.col-md-6 Next
