--- a/app_server/views/questionnaire.pug
+++ b/app_server/views/questionnaire.pug
@@ -25,3 +25,5 @@ block content
               a.btn.nav-btn.col-sm-3.col-md-6(href=prev) Previous
             .col-6
               a#nav-btn-right.btn.nav-btn.col-sm-3.col-md-6 Next
+block scripts
+  script(src='/javascripts/questionnaire.js')
