Fixed something i broke

--- a/app_server/views/questionnaire.pug
+++ b/app_server/views/questionnaire.pug
@@ -24,6 +24,6 @@ block content
             .col-6
               a.btn.nav-btn.col-sm-3.col-md-6(href=prev) Previous
             .col-6
-              a#nav-btn-right.btn.nav-btn.col-sm-3.col-md-6 Next
+              a#nav-btn-right.btn.nav-btn.col-sm-3.col-md-6(href=next) Next
 block scripts
   script(src='/javascripts/questionnaire.js')
