remove add shit

--- a/app_server/views/dashboard.pug
+++ b/app_server/views/dashboard.pug
@@ -36,13 +36,13 @@ block content
       .col-4.nutrition
         .font-weight-bold.box-title Nutrition
         div Calories
-        div Add shit
+        div Add item 
         div Carbohydrates
-        div Add shit
+        div Add item
         div Protein
-        div Add shit
+        div Add item
         div Fats
-        div Add shit
+        div Add item
     br
     br
     br
