--- a/app_server/views/questionnaire.pug
+++ b/app_server/views/questionnaire.pug
@@ -1,29 +1,24 @@
 extends layout
 block content
   .container.main-content
-    .choiceFixed
-      if question
-        section
-          h1.display-4.text-center= question
+    .row
+      .col-12.display-4.text-center= question
 
-      //- Saved Choices
-      .col.text-center
-        each savedAnswer in savedAnswers
-          h2
+    //- Saved Choices
+    .row.justify-content-center.my-5
+      each savedAnswer in savedAnswers
+        .col-12
+          h3.text-center
             span.badge.badge-pill= savedAnswer
 
-      //- Choices
-      .col.text-center
-        each option in options
-          button.option.btn.btn-lg.qnr-btn.m-4.p-3= option
+    //- Choices
+    .row.justify-content-center.mb-5
+      each option in options
+        button.option.btn.btn-lg.qnr-btn.mx-5= option
 
-      //- Prev/Next Btns
-      .navigation-btn
-        .container
-          .row.justify-content-between
-            .col-6
-              a.btn.qnr-nav-btn.col-sm-3.col-md-6(href=prev) Previous
-            .col-6
-              a#nav-btn-right.btn.qnr-nav-btn.col-sm-3.col-md-6(href=next) Next
+    //- Prev/Next Btns
+    .row.justify-content-between
+      a.col-4.btn.qnr-nav-btn(href=prev) Previous
+      a.col-4#nav-btn-right.btn.qnr-nav-btn(href=next) Next
 block scripts
   script(src='/javascripts/questionnaire.js')
