--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -5,6 +5,7 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    block css
   body
     nav.navbar.navbar-expand-md
       .container
