--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -59,6 +59,14 @@ body {
   margin: 3px
 }
 
+.btn-group-xs>.btn, .btn-xs {
+  /* xs button */
+  padding: .25rem .4rem;
+  font-size: .875rem;
+  line-height: .5;
+  border-radius: .2rem;
+}
+
 .btn-default {
   background-color: #FF9A00;
   color: #FFF;
